--- a/WebUIBlazor/Pages/ControlPanel.razor
+++ b/WebUIBlazor/Pages/ControlPanel.razor
@@ -12,14 +12,9 @@
 @implements IDisposable
 
 
-@if (serial.isConnected == "Connected")
-{
-    <MudAlert Severity="Severity.Success" Variant="Variant.Filled">@serial.isConnected</MudAlert>
-}
-else
-{
-    <MudAlert Severity="Severity.Error" Class="sticky-lg-top" Variant="Variant.Filled">@serial.isConnected</MudAlert>
-}
+<ConnectionStatus Connection="ConnectionServiceSerial.printerConnection.IsConnected" />
+<MudAlert Severity="Severity.Success">Selected Printer: <strong>@printer.SelectedPrinter.Name</strong></MudAlert>
+
 <MudGrid>
     <MudItem xs="4">
         <MudPaper Elevation="4">
@@ -69,7 +64,7 @@ else
                 <MudButton Variant="Variant.Filled" Color="Color.Primary" @onclick="() => control.AdjustAxis(MovePositions.EMovePos,true,serial)">Extrude</MudButton>
                 <MudButton Variant="Variant.Filled" Color="Color.Primary" @onclick="() => control.AdjustAxis(MovePositions.EMovePos,false,serial)">Retract</MudButton>
 
-                <MudSwitch @bind-Value="@control.SwitchValue" @onclick="() => {control.ToggleValue();control.SetFanSpeed(control.fanSpeed);}" ThumbIcon="@(@control.SwitchValue==true ? Icons.Material.Filled.Done : Icons.Material.Filled.Close)" ThumbIconColor="@(@control.SwitchValue==true ? Color.Success : Color.Error)" Class="mr-n2 mb-6" />
+                <MudSwitch @bind-Value="@control.SwitchValue" @onclick="() => {control.ToggleValue();control.SetFanSpeed(control.fanSpeed);}" Color="Color.Success" Class="mr-n2 mb-6" />
 
                 <MudSlider Class="d-inline-block" @bind-Value="@control.defaultFanSpeed" Vertical="true" Min="0" Max="255" @onchange="() => control.SetFanSpeed(control.defaultFanSpeed)" />
                 <MudText>@control.fanSpeedInPercentage%</MudText>
@@ -101,7 +96,7 @@ else
 
     protected override void OnInitialized()
     {
-
+        printer.SelectedPrinter = printer.LoadPrinterData<MachineControlHub.Printer>(Data.PrinterDataServiceTest.SELECTED_PRINTER_SETTINGS_PATH);
         int xSize = printer.SelectedPrinter?.Bed?.XSize ?? 0;
         int ySize = printer.SelectedPrinter?.Bed?.YSize ?? 0;
         background.SecondElapsed += OnUpdate;
@@ -130,11 +125,12 @@ else
                 Y = Enumerable.Range(0, ySize + 1).SelectMany(y => Enumerable.Repeat(y, ySize + 1)).Cast<object>().ToList()
             }
             };
+
     }
 
     public void OnUpdate()
     {
-        if (serial.initialized)
+        if (Data.ConnectionServiceSerial.printerConnection.IsConnected)
         {
             Task.Run(() =>
             {
