--- a/WebUIBlazor/Pages/PrinterSettings.razor
+++ b/WebUIBlazor/Pages/PrinterSettings.razor
@@ -3,7 +3,7 @@
 @using MachineControlHub.Material
 @inject Data.PrinterDataServiceTest printer
 
-<MudCard>
+@* <MudCard>
     <MudCardHeader>
         <MudText Typo="Typo.h6">Bed Shape</MudText>
     </MudCardHeader>
@@ -48,7 +48,7 @@
             <MudTextField @bind-Value="printer.Printer.Camera.ResolutionWidth" Label="Resolution Width" Variant="Variant.Outlined" />
             <MudTextField @bind-Value="printer.Printer.Camera.LensFocalLength" Label="Lens Focal Length" Variant="Variant.Outlined" />
         }
-        @*     
+
             //TODO: Implement these
         <MudSwitch @bind-Checked="printer.HasPowerLossRecovery" Label="Has Power Loss Recovery" />
         <MudSwitch @bind-Checked="printer.HasDisplay" Label="Has Display" />
@@ -61,11 +61,11 @@
         <MudSwitch @bind-Checked="printer.HasWebcam" Label="Has Webcam" />
         <MudSwitch @bind-Checked="printer.HasWebcamStream" Label="Has Webcam Stream" />
         <MudSwitch @bind-Checked="printer.HasWebcamSnapshot" Label="Has Webcam Snapshot" />
-        <MudSwitch @bind-Checked="printer.HasWebcamTimelapse" Label="Has Webcam Timelapse" /> *@
+        <MudSwitch @bind-Checked="printer.HasWebcamTimelapse" Label="Has Webcam Timelapse" />
     </MudCardContent>
-</MudCard>
+</MudCard> *@
 
-<MudCard>
+@* <MudCard>
     <MudCardHeader>
         <MudText Typo="Typo.h6">Set if your machine has multiple extruders</MudText>
     </MudCardHeader>
@@ -105,7 +105,7 @@
     </MudCardHeader>
 
     <MudButton OnClick="printer.SetMaxFeedrates">Set Feedrates to printer</MudButton>
-</MudCard>
+</MudCard> *@
 
 <MudCard>
     <MudCardHeader>
@@ -121,6 +121,54 @@
             <MudButton Type="submit" OnClick="printer.CreatePreheatProfile" Variant="Variant.Filled" Color="Color.Primary">Save Presets</MudButton>
             <MudButton OnClick="printer.SendPreheatingProfiles">Send Presets To Printer</MudButton>
         </EditForm>
+    </MudCardContent>
+</MudCard>
+
+<MudCard>
+    <MudCardContent>
+        <MudText> Printer Settings:</MudText>
+        <MudText> Temperature Units: @printer.linearUnits</MudText>
+        <MudText> Temperature Units: @printer.temperatureUnits</MudText>
+        <MudText> X Steps: @printer.Printer.MotionSettings.XStepsPerUnit</MudText>
+        <MudText> Y Steps: @printer.Printer.MotionSettings.YStepsPerUnit</MudText>
+        <MudText> Z Steps: @printer.Printer.MotionSettings.ZStepsPerUnit</MudText>
+        <MudText> E Steps: @printer.Printer.MotionSettings.EStepsPerUnit</MudText>
+        <MudText> X Max Feedrate: @printer.Printer.MotionSettings.XMaxFeedrate</MudText>
+        <MudText> Y Max Feedrate: @printer.Printer.MotionSettings.YMaxFeedrate</MudText>
+        <MudText> Z Max Feedrate: @printer.Printer.MotionSettings.ZMaxFeedrate</MudText>
+        <MudText> E Max Feedrate: @printer.Printer.MotionSettings.EMaxFeedrate</MudText>
+        <MudText Typo="Typo.h6"> Hotend Pid Values:</MudText>
+        <MudText> P: @printer.Printer.HotendTemperatures.PIDHotendValues.Proportional</MudText>
+        <MudText> I: @printer.Printer.HotendTemperatures.PIDHotendValues.Integral</MudText>
+        <MudText> D: @printer.Printer.HotendTemperatures.PIDHotendValues.Derivative</MudText>
+        <MudText Typo="Typo.h6"> Bed Pid Values:</MudText>
+
+        <MudText> P: @printer.Printer.BedTemperatures.PIDBedValues.Proportional</MudText>
+        <MudText> I: @printer.Printer.BedTemperatures.PIDBedValues.Integral</MudText>
+        <MudText> D: @printer.Printer.BedTemperatures.PIDBedValues.Derivative</MudText>
+        <MudText Typo="Typo.h6">Accelerations</MudText>
+        <MudText> Print Acceleration: @printer.Printer.MotionSettings.PrintAcceleration</MudText>
+        <MudText> Retract Acceleration: @printer.Printer.MotionSettings.RetractAcceleration</MudText>
+        <MudText> Travel Acceleration: @printer.Printer.MotionSettings.TravelAcceleration</MudText>
+        <MudText> X Max Acceleration: @printer.Printer.MotionSettings.XMaxAcceleration</MudText>
+        <MudText> Y Max Acceleration: @printer.Printer.MotionSettings.YMaxAcceleration</MudText>
+        <MudText> Z Max Acceleration: @printer.Printer.MotionSettings.ZMaxAcceleration</MudText>
+        <MudText> E Max Acceleration: @printer.Printer.MotionSettings.EMaxAcceleration</MudText>
+        <MudText Typo="Typo.h6"> Advanced Settings: </MudText>
+        <MudText> Min Segment Time: @printer.Printer.MotionSettings.MinSegmentTime</MudText>
+        <MudText> Min Feedrate: @printer.Printer.MotionSettings.MinFeedrate</MudText>
+        <MudText> Min Travel Feedrate: @printer.Printer.MotionSettings.MinTravelFeedrate</MudText>
+        <MudText> Junction Deviation: @printer.Printer.MotionSettings.JunctionDeviation</MudText>
+        <MudText Typo="Typo.h6"> Offset Settings:</MudText>
+        <MudText> X Offset: @printer.Printer.MotionSettings.XHomeOffset</MudText>
+        <MudText> Y Offset: @printer.Printer.MotionSettings.YHomeOffset</MudText>
+        <MudText> Z Offset: @printer.Printer.MotionSettings.ZHomeOffset</MudText>
+        <MudText Typo="Typo.h6"> Z-Probe Offsets:</MudText>
+        <MudText> X Offset: @printer.Printer.Head.XProbeOffset</MudText>
+        <MudText> Y Offset: @printer.Printer.Head.YProbeOffset</MudText>
+        <MudText> Z Offset: @printer.Printer.Head.ZProbeOffset</MudText>
+        <MudText Typo="Typo.h6"> AutoBed Level:</MudText>
+        <MudText> @(printer.Printer.HasAutoBedLevel ? "Enabled" : "Not Enabled") </MudText>
     </MudCardContent>
 </MudCard>
 
