--- a/WebUIBlazor/Shared/MainLayout.razor
+++ b/WebUIBlazor/Shared/MainLayout.razor
@@ -4,6 +4,9 @@
 <MudThemeProvider @ref="@_mudThemeProvider" @bind-IsDarkMode="@_isDarkMode" Theme="_theme" />
 <MudDialogProvider/>
 <MudSnackbarProvider/>
+<MudScrollToTop>
+    <MudFab Style="@($"color:{Colors.Shades.White}; background:{Colors.Teal.Default};")" StartIcon="@Icons.Material.Filled.KeyboardArrowUp" Size="Size.Small" />
+</MudScrollToTop>
 <MudLayout>
     <MudAppBar Elevation="1" Dense="true">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
