connection is now running through backgroundTimer
controlPanel component is reading the data when there is data not reading each second and Print component is half implemented

--- a/WebUIBlazor/Pages/Connection.razor
+++ b/WebUIBlazor/Pages/Connection.razor
@@ -44,6 +44,9 @@
             serial.Initialize($"{serial.portName},{serial.baudRate}");
             ConnectionServiceSerial.printerConnection.IsConnected = true;
             serial.Connect();
+
+            //set the host keep alive command to 1 second after connection
+            serial.Write("M113 S1");
         }
         catch (Exception e)
         {
